deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  namespace: production
  labels:
    app: node-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: node-api

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: node-api

    spec:
      containers:
      - name: node-api
        image: lazares/node-api:v1.0
        imagePullPolicy: Always

        ports:
        - name: api-web
          containerPort: 3000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /
            port: api-web
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: api-web
          initialDelaySeconds: 10
          periodSeconds: 5
