service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: production

spec:
  type: ClusterIP

  selector:
    app: node-api

  ports:
  - name: api-web
    port: 3000
    targetPort: api-web
    protocol: TCP
