service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8sstatic-web-service
  namespace: website
spec:
  type: NodePort
  selector:
    app: k8sstatic-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
